# ecommerce-listing-auditor

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: custom-audit-request.md
.github/workflows/: ci.yml
docs/: custom-audit-offer.md  html-report-service.md
samples/: listings.csv  sample-audit-report.html  sample-audit-report.md  sample-audit-request.md
src/listing_auditor/: __init__.py  __main__.py  audit.py  cli.py
tests/: test_audit.py  test_cli.py
